--- a/index.html
+++ b/index.html
@@ -23,38 +23,49 @@
         <div class="keep-track">
             <h1>Keep track of your snippets</h1>
             <p>Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
-
+            <span>
             <img src="images/image-computer.png" class="computer" alt="desktop computer">
-
+<div class="keep-track-text">
             <h2>Quick Search</h2>
             <p>Easily search your snippets by content, category, web address, application, and more.</p>
             <h2>iCloud Sync</h2>
             <p>Instantly saves and syncs snippets across all your devices.</p>
             <h2>Complete History</h2>
             <p>Retrieve any snippets from the first moment you started using the app.</p>
+            </div>
+        </span>
         </div>
 
         <div class="access">
             <h1>Access Clipboard anywhere</h1>
             <p> Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
-
-            <img src="images/image-devices.png" class="computer" alt="computer and phone">
-
+            <span>
+            <img src="images/image-devices.png" class="computer-phone" alt="computer and phone">
+        </span>
         </div>
 
         <div class="supercharge">
+
             <h1>Supercharge your workflow</h1>
             <p>We’ve got the tools to boost your productivity.</p>
-
+            <div class="greyscale">
+                <span class="blacklists">
             <img src="images/icon-blacklist.svg" alt="greyscale paper">
+
             <h2>Create blacklists</h2>
             <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+        </span>
+                <span class="plain">
             <img src="images/icon-text.svg" alt="greyscale letter a">
             <h2>Plain text snippets</h2>
             <p>Remove unwanted formatting from copied text for a consistent look.</p>
+        </span>
+                <span class="sneak">
             <img src="images/icon-preview.svg" alt="greyscale eye">
             <h2>Sneak preview</h2>
             <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+        </span>
+            </div>
         </div>
 
         <div class="logos">
@@ -77,12 +88,13 @@
     </div>
     <footer>
         <img src="images/logo.svg" class="green-logo-2" alt="green clipboard logo">
-
-        <p>FAQs</p>
-        <p>Contact Us</p>
-        <p>Privacy Policy</p>
-        <p>Press Kit</p>
-        <p>Install Guide</p>
+        <div class="footer-links">
+            <p>FAQs</p>
+            <p>Privacy Policy</p>
+            <p>Install Guide</p>
+            <p>Contact Us</p>
+            <p>Press Kit</p>
+        </div>
         <div class="social-icons">
             <img src="images/icon-facebook.svg" alt="facebook logo">
             <img src="images/icon-twitter.svg" alt="twitter logo">
@@ -91,7 +103,7 @@
 
         <nav>
             <p class="attribution">
-                Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. <br> Coded by <a href="#">Katie Stewart</a>.
+                Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. <br> Coded by <a href="https://github.com/katiestewartcodes">Katie Stewart</a>.
             </p>
         </nav>
     </footer>
