Updated active states for buttons and links

--- a/index.html
+++ b/index.html
@@ -89,15 +89,20 @@
     <footer>
         <img src="images/logo.svg" class="green-logo-2" alt="green clipboard logo">
         <div class="footer-links">
-            <p>FAQs</p>
-            <p>Privacy Policy</p>
-            <p>Install Guide</p>
-            <p>Contact Us</p>
-            <p>Press Kit</p>
+            <p>FAQs
+            </p>
+            <p>Privacy Policy
+            </p>
+            <p>Install Guide
+            </p>
+            <p>Contact Us
+            </p>
+            <p>Press Kit
+            </p>
         </div>
         <div class="social-icons">
             <img src="images/icon-facebook.svg" alt="facebook logo">
-            <img src="images/icon-twitter.svg" alt="twitter logo">
+            <img src="images/icon-twitter.svg" class="twitter" alt="twitter logo">
             <img src="images/icon-instagram.svg" alt="instagram logo">
         </div>
 
